--- a/website/config/_default/params.yaml
+++ b/website/config/_default/params.yaml
@@ -1,2 +1,2 @@
-github: https://github.com/nicklin99/quickDocs
+github: https://github.com/nicklin99/quick-docs-basic
 gitee: https://gitee.com/wfell/quick-docs
