--- a/website/config/_default/config.yaml
+++ b/website/config/_default/config.yaml
@@ -3,3 +3,4 @@ languageCode: cn
 theme: 'quick-docs-basic'
 copyright: 'MIT Licensed | Copyright © 2022-present Nick Lin'
 defaultContentLanguage: cn
+disableHugoGeneratorInject: true
