--- a/website/config/_default/params.yaml
+++ b/website/config/_default/params.yaml
@@ -1,2 +1,4 @@
 github: https://github.com/nicklin99/quick-docs-basic
 gitee: https://gitee.com/wfell/quick-docs
+github_subdir: website
+github_branch: master
